# movenestparis-movenest-invest-tool

./: README.md  app.py  calculator.py  pdf_generator.py  pyproject.toml  requirements.txt  translations.py
static/css/: style.css
static/js/: script.js
templates/: index.html  login.html
templates/<div class="card mt-3">     <div class="card-body text-muted">         <p>No results to display yet.</p>     </div> </: results.html
